[project]
name = "chromadb-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.10.2",
    "pypdf>=6.14.2",
    "streamlit>=1.59.2",
    "tavily>=1.1.0",
    "typing>=3.10.0.0",
    "unstructured[all-docs]>=0.24.1",
]
